<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/selector_popup_photo"
    android:layout_height="200dp">
    <com.mdweb.tunnumerique.tools.style.TextViewTypo
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center"
        app:sizeTypoText="18"
        android:textColor="@color/white_color"
        android:background="@drawable/bg_dialog_upload"
        app:styleTypoText="oblique"
        android:text="@string/partage_photo"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_background"/>
    <com.mdweb.tunnumerique.tools.style.TextViewTypo
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center"
        app:sizeTypoText="18"
        app:styleTypoText="oblique"
        android:text="@string/prendre_photo"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_background"/>
    <com.mdweb.tunnumerique.tools.style.TextViewTypo
        android:id="@+id/load_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center"
        app:sizeTypoText="18"
        app:styleTypoText="oblique"
        android:text="@string/charger_photo"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_background"/>
    <com.mdweb.tunnumerique.tools.style.TextViewTypo
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center"
        app:sizeTypoText="18"
        app:styleTypoText="oblique"
        android:textColor="@color/red_color"
        android:text="@string/annuler"/>
</LinearLayout>

</RelativeLayout>